// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should setup Expenses properly for multiple expenses 1`] = `
<div>
  <h4>
    Viewing 
    4
     expenses totalling
    $1,095.00
  </h4>
</div>
`;

exports[`Should setup Expenses properly for single expense 1`] = `
<div>
  <h4>
    Viewing 1 expense totalling 
    $1.95
  </h4>
</div>
`;
